--- a/LDBS55.html
+++ b/LDBS55.html
@@ -405,13 +405,13 @@
                                         <td> <label><strong>PLACA PATENTE</strong>: LDBS55</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Marca</strong>: jAC</label> </td>
+                                        <td> <label><strong>Marca</strong>: JAC</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Tipo</strong>: STATION WAGON</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Modelo</strong>: S2 C3 1.5</label> </td>
+                                        <td> <label><strong>Modelo</strong>: S2 CE 1.5</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Año Fab.</strong>: 2019 </label> </td>
