--- a/GLGV14.html
+++ b/GLGV14.html
@@ -402,19 +402,19 @@
                             <table id="certificadoRT" class="altrowstable">
                                 <tbody>
                                     <tr>
-                                        <td> <label><strong>PLACA PATENTE</strong>: BRGR10</label> </td>
+                                        <td> <label><strong>PLACA PATENTE</strong>: GLGV14</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Marca</strong>: DODGE</label> </td>
+                                        <td> <label><strong>Marca</strong>: FIAT</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Tipo</strong>: STATION WAGON</label> </td>
+                                        <td> <label><strong>Tipo</strong>: VEHICULO</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Modelo</strong>: DURANGO</label> </td>
+                                        <td> <label><strong>Modelo</strong>: PALIO 1.4</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Año Fab.</strong>: 2009 </label> </td>
+                                        <td> <label><strong>Año Fab.</strong>: 2014 </label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
@@ -424,16 +424,16 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000372020</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B132700000094140</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 16-03-2023</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 27-03-2023</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 29-02-2024</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 29-03-2024</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
@@ -450,16 +450,16 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000372020</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B132700000094140</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 16-03-2023</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 27-03-2023</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 29-02-2024</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 29-03-2024</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
