--- a/DTV088-8.html
+++ b/DTV088-8.html
@@ -402,19 +402,19 @@
                             <table id="certificadoRT" class="altrowstable">
                                 <tbody>
                                     <tr>
-                                        <td> <label><strong>PLACA PATENTE</strong>: BRGR10</label> </td>
+                                        <td> <label><strong>PLACA PATENTE</strong>: DTV088</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Marca</strong>: DODGE</label> </td>
+                                        <td> <label><strong>Marca</strong>: KINKLON</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Tipo</strong>: STATION WAGON</label> </td>
+                                        <td> <label><strong>Tipo</strong>: MOTO</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Modelo</strong>: DURANGO</label> </td>
+                                        <td> <label><strong>Modelo</strong>: JL 150 T</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Año Fab.</strong>: 2009 </label> </td>
+                                        <td> <label><strong>Año Fab.</strong>: 2015 </label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
@@ -424,10 +424,10 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000372020</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B132700000094138</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 16-03-2023</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 04-02-2023</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
@@ -450,10 +450,10 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000372020</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B132700000094138</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 16-03-2023</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 02-02-2023</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
