--- a/RN0961-7.html
+++ b/RN0961-7.html
@@ -402,19 +402,19 @@
                             <table id="certificadoRT" class="altrowstable">
                                 <tbody>
                                     <tr>
-                                        <td> <label><strong>PLACA PATENTE</strong>: BRGR10</label> </td>
+                                        <td> <label><strong>PLACA PATENTE</strong>: RN0961</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Marca</strong>: DODGE</label> </td>
+                                        <td> <label><strong>Marca</strong>: HONDA</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Tipo</strong>: STATION WAGON</label> </td>
+                                        <td> <label><strong>Tipo</strong>: MOTO</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Modelo</strong>: DURANGO</label> </td>
+                                        <td> <label><strong>Modelo</strong>: SC ELITE 125 CC</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Año Fab.</strong>: 2009 </label> </td>
+                                        <td> <label><strong>Año Fab.</strong>: 2007 </label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
@@ -424,16 +424,16 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000372020</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1327000000374723</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 16-03-2023</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 28-02-2023</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 29-02-2024</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 28-02-2024</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
@@ -450,7 +450,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000372020</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1327000000374723</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Fecha</strong>: 16-03-2023</label> </td>
