--- a/GTWH67.html
+++ b/GTWH67.html
@@ -405,13 +405,13 @@
                                         <td> <label><strong>PLACA PATENTE</strong>: GTWH67</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Marca</strong>: DONGFENG</label> </td>
+                                        <td> <label><strong>Marca</strong>: DFM</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Tipo</strong>: STATION WAGON</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Modelo</strong>: H30 CROSS NOBLE MT</label> </td>
+                                        <td> <label><strong>Modelo</strong>: H30</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Año Fab.</strong>: 2014 </label> </td>
