--- a/YK0451.html
+++ b/YK0451.html
@@ -402,19 +402,19 @@
                             <table id="certificadoRT" class="altrowstable">
                                 <tbody>
                                     <tr>
-                                        <td> <label><strong>PLACA PATENTE</strong>: GTWH67</label> </td>
+                                        <td> <label><strong>PLACA PATENTE</strong>: YK0451</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Marca</strong>: DFM</label> </td>
+                                        <td> <label><strong>Marca</strong>: MOTORRAD</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Tipo</strong>: STATION WAGON</label> </td>
+                                        <td> <label><strong>Tipo</strong>: AUTO</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Modelo</strong>: H30</label> </td>
+                                        <td> <label><strong>Modelo</strong>: CUSTOM 200</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Año Fab.</strong>: 2014 </label> </td>
+                                        <td> <label><strong>Año Fab.</strong>: 2010 </label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
@@ -424,10 +424,10 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000157394</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1327000000095128</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 06-07-2023</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 21-07-2023</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
@@ -450,10 +450,10 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000157394</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1327000000095128</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 06-07-2023</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 21-07-2023</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
