--- a/YK0451.html
+++ b/YK0451.html
@@ -408,7 +408,7 @@
                                         <td> <label><strong>Marca</strong>: MOTORRAD</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Tipo</strong>: AUTO</label> </td>
+                                        <td> <label><strong>Tipo</strong>: MOTO</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Modelo</strong>: CUSTOM 200</label> </td>
