--- a/DSBS74.html
+++ b/DSBS74.html
@@ -405,10 +405,10 @@
                                         <td> <label><strong>PLACA PATENTE</strong>: DSBS74</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Marca</strong>: CAMION</label> </td>
+                                        <td> <label><strong>Marca</strong>: INTERNATIONAL/label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Tipo</strong>: CAMIONL</label> </td>
+                                        <td> <label><strong>Tipo</strong>: CAMION</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Modelo</strong>: 7400</label> </td>
