--- a/DSBS74.html
+++ b/DSBS74.html
@@ -405,7 +405,7 @@
                                         <td> <label><strong>PLACA PATENTE</strong>: DSBS74</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Marca</strong>: INTERNATIONAL/label> </td>
+                                        <td> <label><strong>Marca</strong>: INTERNATIONAL</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Tipo</strong>: CAMION</label> </td>
