--- a/TC9284.html
+++ b/TC9284.html
@@ -402,19 +402,19 @@
                             <table id="certificadoRT" class="altrowstable">
                                 <tbody>
                                     <tr>
-                                        <td> <label><strong>PLACA PATENTE</strong>: JZLL40</label> </td>
+                                        <td> <label><strong>PLACA PATENTE</strong>: TC9284</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Marca</strong>: PEUGEOT</label> </td>
+                                        <td> <label><strong>Marca</strong>: FORD</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Tipo</strong>: AUTOMOVIL</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Modelo</strong>: 301 ALLURE HDI 1.6</label> </td>
+                                        <td> <label><strong>Modelo</strong>: ESCORT LX 1.8</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Año Fab.</strong>: 2018 </label> </td>
+                                        <td> <label><strong>Año Fab.</strong>: 1999 </label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
@@ -424,16 +424,16 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000295428</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1327360000085431</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 15-02-2023</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 04-07-2023</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 15-02-2024</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 04-07-2024</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
@@ -450,16 +450,16 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000295428</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1327360000085431</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 15-02-2023</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 04-07-2023</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 15-02-2024</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 04-07-2024</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
