--- a/RY-7230-5.html
+++ b/RY-7230-5.html
@@ -440,7 +440,7 @@
                                         <td> <label><strong>Fecha Venc.</strong>: 01-01-2025</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: ORMAZÁBAL HIJOS LTDA</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>: ORMAZÁBAL HIJOS LTDA.</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Dirección PRT</strong>: Av. Industrial N° 7200</label> </td>
