--- a/BJLC75.html
+++ b/BJLC75.html
@@ -411,7 +411,7 @@
                                         <td> <label><strong>Tipo</strong>: AUTOMOVIL</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Modelo</strong>: TIIDA 1.6</label> </td>
+                                        <td> <label><strong>Modelo</strong>: TIIDA SEDAN MT Ll</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Año Fab.</strong>: 2011 </label> </td>
