--- a/GHXY84.html
+++ b/GHXY84.html
@@ -417,7 +417,7 @@
                                         <td> <label><strong>Año Fab.</strong>: 2014 </label> </td>
                                     </tr>
                                   <tr>
-                                        <td> <label><strong>Tipo Sello</strong>:  </label> </td>
+                                        <td> <label><strong>Tipo Sello</strong>: Catalítico </label> </td>
                                     </tr>
                                 
                                     <tr>
