--- a/JDKG64.html
+++ b/JDKG64.html
@@ -442,7 +442,7 @@
                                         <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Ramón Freire N°516</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION GASES</strong></label> </td>
@@ -467,7 +467,7 @@
                                         <td> <label><strong>Nombre PRT</strong>:  REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Ramón Freire N°516</label> </td>
                                     </tr>
                                 </tbody>
                             </table>
