--- a/JDKG64.html
+++ b/JDKG64.html
@@ -423,7 +423,7 @@
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Region</strong>: XIII Metropolitana de Santiago</label>
+                                        <td> <label><strong>Region</strong>: III de Atacama</label>
                                         </td>
                                     </tr>
                                     <tr>
@@ -439,7 +439,7 @@
                                         <td> <label><strong>Fecha Venc.</strong>: 31-07-2025</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS RIO SAN PEDRO</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Dirección PRT</strong>: Av. Ramón Freire N°516</label> </td>
@@ -448,7 +448,7 @@
                                         <td> <label><strong>REVISION GASES</strong></label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Region</strong>: XIII Metropolitana de Santiago</label>
+                                        <td> <label><strong>Region</strong>: III de Atacama</label>
                                         </td>
                                     </tr>
                                     <tr>
@@ -464,7 +464,7 @@
                                         <td> <label><strong>Fecha Venc.</strong>: 31-07-2025</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>:  REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>:  REVISIONES TÉCNICAS RIO SAN PEDRO</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Dirección PRT</strong>: Av. Ramón Freire N°516</label> </td>
