--- a/MZ9855.html
+++ b/MZ9855.html
@@ -417,7 +417,7 @@
                                         <td> <label><strong>Año Fab.</strong>: 2007 </label> </td>
                                     </tr>
                                   <tr>
-                                        <td> <label><strong>Tipo Sello</strong>: VERDE </label> </td>
+                                        <td> <label><strong>Tipo Sello</strong>: CATALITICO </label> </td>
                                     </tr>
                                 
                                     <tr>
