--- a/JHVH85.html
+++ b/JHVH85.html
@@ -408,13 +408,16 @@
                                         <td> <label><strong>Marca</strong>: CHEVROLET</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Tipo</strong>: CAMIONETA</label> </td>
+                                        <td> <label><strong>Tipo</strong>: CAMIONETA(CAP<1750KG)</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Modelo</strong>: D-MAX CC 2.5D DAB ABS NA</label> </td>
+                                        <td> <label><strong>Modelo</strong>: DMAX 4WD 2.5</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Año Fab.</strong>: 2017 </label> </td>
+                                        <td> <label><strong>Año Fab.</strong>: 2017</label> </td>
+                                    </tr>
+                                    <tr>
+                                        <td> <label><strong>Tipo Sello</strong>: SELLO VERDE</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
@@ -424,23 +427,22 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000003592438</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1332000000193593</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 29-03-2024</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 03-02-2025</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 26-08-2024</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 31-08-2025</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
-                                                SPA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Lo Blanco N°1789</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION GASES</strong></label> </td>
@@ -450,23 +452,22 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000003592438</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1332000000193593</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 29-03-2024</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 03-02-2025</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 26-08-2024</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 31-08-2025</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
-                                                SPA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>:  REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Lo Blanco N°1789</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
                                     </tr>
                                 </tbody>
                             </table>
