--- a/DHXX39.html
+++ b/DHXX39.html
@@ -423,7 +423,7 @@
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Region</strong>: XIII Metropolitana de Santiago</label>
+                                        <td> <label><strong>Region</strong>: III de Atacama</label>
                                         </td>
                                     </tr>
                                     <tr>
@@ -439,10 +439,10 @@
                                         <td> <label><strong>Fecha Venc.</strong>: 31-01-2026</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS RIO SAN PEDRO</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Ramón Freire N°516</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION GASES</strong></label> </td>
@@ -464,10 +464,10 @@
                                         <td> <label><strong>Fecha Venc.</strong>: 31-01-2026</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>:  REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS RIO SAN PEDRO</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Ramón Freire N°516</label> </td>
                                     </tr>
                                 </tbody>
                             </table>
