--- a/VF8673.html
+++ b/VF8673.html
@@ -417,7 +417,7 @@
                                         <td> <label><strong>Año Fab.</strong>: 2003</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Tipo Sello</strong>: SELLO VERDE</label> </td>
+                                        <td> <label><strong>Tipo Sello</strong>: SELLO CATALITICO</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
