--- a/RPHP49.html
+++ b/RPHP49.html
@@ -442,7 +442,7 @@
                                         <td> <label><strong>Nombre PRT</strong>: REVISIONES LOS LAGOS</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: RUTA CINCO SUR, PUERTO MONTT</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Parque Industrial N° 1419, PUERTO MONTT</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION GASES</strong></label> </td>
@@ -467,7 +467,7 @@
                                         <td> <label><strong>Nombre PRT</strong>:  REVISIONES LOS LAGOS</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: RUTA CINCO SUR, PUERTO MONTT</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Parque Industrial N° 1419, PUERTO MONTT</label> </td>
                                     </tr>
                                 </tbody>
                             </table>
