--- a/FXTH37.html
+++ b/FXTH37.html
@@ -408,7 +408,7 @@
                                         <td> <label><strong>Marca</strong>: HYUNDAI</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Tipo</strong>: CHEVROLET</label> </td>
+                                        <td> <label><strong>Tipo</strong>: AUTOMOVIL</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Modelo</strong>: SPARK GT II LT 1.2</label> </td>
