--- a/DZPX81-3.html
+++ b/DZPX81-3.html
@@ -411,10 +411,13 @@
                                         <td> <label><strong>Tipo</strong>: CHASIS CABINADO</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Modelo</strong>:NKR 612 E4</label> </td>
+                                        <td> <label><strong>Modelo</strong>: NKR 612 E4</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Año Fab.</strong>: 2012 </label> </td>
+                                        <td> <label><strong>Año Fab.</strong>: 2012</label> </td>
+                                    </tr>
+                                    <tr>
+                                        <td> <label><strong>Tipo Sello</strong>: SELLO VERDE</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
@@ -424,23 +427,22 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000003308138</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1332000000193932</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 13-08-2024</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 19-03-2025</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 13-02-2025</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 30-09-2025</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
-                                                SPA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Lo Blanco N°1789</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION GASES</strong></label> </td>
@@ -450,23 +452,22 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000003308138</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1332000000193932</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 13-08-2024</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 19-03-2025</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 13-02-2025</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 30-09-2025</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
-                                                SPA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>:  REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Lo Blanco N°1789</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
                                     </tr>
                                 </tbody>
                             </table>
