Update and rename YW5998.html to JLKH27.html

--- a/JLKH27.html
+++ b/JLKH27.html
@@ -402,22 +402,22 @@
                             <table id="certificadoRT" class="altrowstable">
                                 <tbody>
                                     <tr>
-                                        <td> <label><strong>PLACA PATENTE</strong>: YW5998</label> </td>
+                                        <td> <label><strong>PLACA PATENTE</strong>: JLKH27</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Marca</strong>: HONDA</label> </td>
+                                        <td> <label><strong>Marca</strong>: SSANGYONG</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Tipo</strong>: STATION WAGON</label> </td>
+                                        <td> <label><strong>Tipo</strong>: CAMIONETA</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Modelo</strong>: CRV EXS 4X4 2.4 AUT</label> </td>
+                                        <td> <label><strong>Modelo</strong>: ACTYON SPORT 2.0</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Año Fab.</strong>: 2007</label> </td>
+                                        <td> <label><strong>Año Fab.</strong>: 2017</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Tipo Sello</strong>: SELLO VERDE</label> </td>
+                                        <td> <label><strong>Tipo Sello</strong>: SELLO CATALITICO</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
