--- a/FXTH37.html
+++ b/FXTH37.html
@@ -405,7 +405,7 @@
                                         <td> <label><strong>PLACA PATENTE</strong>: FXTH37</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Marca</strong>: HYUNDAI</label> </td>
+                                        <td> <label><strong>Marca</strong>: CHEVROLET</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Tipo</strong>: AUTOMOVIL</label> </td>
@@ -436,7 +436,7 @@
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 31-10-2026</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 31-10-2025</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
@@ -461,7 +461,7 @@
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 31-10-2026</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 31-10-2025</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Nombre PRT</strong>:  REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
